# Pokebet

./: .gitignore  main.py
back-end/: .env  .env.example  .gitignore  README.md  main.py  mlflow.db  pokemon_list.json  pyproject.toml
back-end/data/: merged_light.csv
back-end/mlruns/0/: meta.yaml
back-end/scripts/: data_prep.py  promote_best.py  train.py
back-end/src/mlflow/: main.py  train.py
back-end/src/mlflow/1/9502c349de0f43fd8946110266306f08/artifacts/: estimator.html
back-end/src/mlflow/1/af363174b5d04b888e904313efc1ec91/artifacts/: estimator.html
back-end/src/mlflow/1/models/m-b2bc76aec7b8404689c1ff7dfd412281/artifacts/: MLmodel  registered_model_meta
back-end/src/mlflow/1/models/m-cd48a52bdabe473092ab6e68d06ea0d5/artifacts/: MLmodel  conda.yaml  registered_model_meta
back-end/src/pokebet/: README.md  main.py  mlflow_api.py  model.py  probabilities.py
back-end/src/pokebet/utils/: effectiveness_calculator.py
front-end/pokebet/: package-lock.json  package.json
front-end/pokebet/src/: App.css  App.js
front-end/pokebet/src/component/actionButton/: ActionButton.css  ActionButton.jsx
front-end/pokebet/src/component/battleTypeSelector/: BattleTypeSelector.css  BattleTypeSelector.jsx
front-end/pokebet/src/component/buttonBar/: ButtonBar.css  ButtonBar.jsx
front-end/pokebet/src/component/pokemonSelector/: PokemonSelector.css  PokemonSelector.jsx  pokemonList.js
front-end/pokebet/src/component/probabilityBar/: ProbabilityBar.css  (+1 more)
front-end/pokebet/src/pages/: fightPage.jsx  mainPage.jsx  resultPage.jsx
notebook/: pokebet_pipeline.ipynb
