[project]
name = "back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [    
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.3"
    ]

[dependency-groups]
dev = [
    "pytest>=8.4.2"
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

