[project]
name = "back-end"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [    
    "fastapi>=0.121.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.3",
    "mlflow>=2.16.0",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.2"
    ]

[dependency-groups]
dev = [
    "pytest>=8.4.2"
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

